--- a/templates/setup.html
+++ b/templates/setup.html
@@ -9,7 +9,7 @@
 </section>
 {% endif %}
 <section class="space-y-5 mb-10">
-  <h1 class="text-2xl font-bold">Setup Certification</h1>
+  <h1 class="text-2xl font-bold">Setup Account</h1>
   <form method="POST" class="space-y-5">
     {{form.hidden_tag()}}
     <div class="space-y-3">
