--- a/templates/share.html
+++ b/templates/share.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block title %}Share Certification{% endblock %} {%
 block content %}
 <section class="space-y-5 mb-10">
-  <h1 class="text-2xl font-bold">Share Certification</h1>
-  <p>Copy you certification and share it with others!</p>
+  <h1 class="text-2xl font-bold">Share your Contact</h1>
+  <p>Copy you certification and share your contact with others!</p>
   <div class="space-y-3">
     <label class="font-bold" for="public-key-link">Public Key</label>
     <textarea
