--- a/templates/setup.html
+++ b/templates/setup.html
@@ -1,13 +1,5 @@
 {% extends "base.html" %} {% block title %}Setup Certification{% endblock %}
-{%block content %} {% if get_flashed_messages() %}
-<section class="space-y-5 mb-10">
-  {% for message in get_flashed_messages() %}
-  <div class="p-5 rounded-lg border-2">
-    <p>{{ message }}</p>
-  </div>
-  {% endfor %}
-</section>
-{% endif %}
+{%block content %}
 <section class="space-y-5 mb-10">
   <h1 class="text-2xl font-bold">Setup Account</h1>
   <form method="POST" class="space-y-5">
