--- a/templates/base.html
+++ b/templates/base.html
@@ -29,15 +29,10 @@
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z"
-                />
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"
+                  d="M15 19.128a9.38 9.38 0 002.625.372 9.337 9.337 0 004.121-.952 4.125 4.125 0 00-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 018.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0111.964-3.07M12 6.375a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zm8.25 2.25a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z"
                 />
               </svg>
-              <p>Locations</p>
+              <p>Contacts</p>
             </div>
           </a>
           <a href="/add/">
@@ -56,10 +51,10 @@
                   d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z"
                 />
               </svg>
-              <p>Add User</p>
+              <p>Add Contact</p>
             </div>
           </a>
-          <a href="/added-users/">
+          <a href="/send-location/">
             <div class="flex items-center space-x-3">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -72,10 +67,10 @@
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
+                  d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5"
                 />
               </svg>
-              <p>Users</p>
+              <p>Send Location</p>
             </div>
           </a>
           <a href="/share/">
@@ -101,7 +96,15 @@
       </div>
     </header>
     <main class="max-w-screen-lg mx-auto grow px-7 w-full">
-      {% block content %} {% endblock %}
+      {% if get_flashed_messages() %}
+      <section class="space-y-5 mb-10">
+        {% for message in get_flashed_messages() %}
+        <div class="p-5 rounded-lg border-2">
+          <p>{{ message }}</p>
+        </div>
+        {% endfor %}
+      </section>
+      {% endif %} {% block content %} {% endblock %}
     </main>
     <footer class="border-t-2">
       <div
