--- a/templates/share.html
+++ b/templates/share.html
@@ -1,33 +1,17 @@
 {% extends "base.html" %} {% block title %}Share Certification{% endblock %} {%
 block content %}
-<section class="space-y-5 mb-10">
+<section class="space-y-5 mb-10 flex flex-col">
   <h1 class="text-2xl font-bold">Share your Contact</h1>
-  <p>Copy you certification and share your contact with others!</p>
-  <div class="space-y-3">
-    <label class="font-bold" for="public-key-link">Public Key</label>
-    <textarea
-      class="bg-gray-200 rounded-lg w-full p-3"
-      name="private-key"
-      id="private-key"
-      cols="30"
-      rows="10"
-      readonly="readonly"
-    >
-      {{ public_key }}
-    </textarea>
-  </div>
-  <div class="space-y-3">
-    <label class="font-bold" for="public-key">Private Key</label>
-    <textarea
-      class="bg-gray-200 rounded-lg w-full p-3"
-      name="public-key"
-      id="public-key"
-      cols="30"
-      rows="10"
-      readonly="readonly"
-    >
-      {{ private_key }}
-    </textarea>
-  </div>
+  <p>Download your certification and share your contact with others!</p>
+  <a role="button" href="/download/public">
+    <button class="bg-blue-600 text-white w-full rounded-lg p-3">
+      Download Public Key
+    </button>
+  </a>
+  <a role="button" href="/download/private">
+    <button class="bg-blue-600 text-white w-full rounded-lg p-3">
+      Download Private Key
+    </button>
+  </a>
 </section>
 {% endblock %}
