--- a/templates/share.html
+++ b/templates/share.html
@@ -2,7 +2,7 @@
 block content %}
 <section class="space-y-5 mb-10 flex flex-col">
   <h1 class="text-2xl font-bold">Share your Contact</h1>
-  <p>Download your certification and share your contact with others!</p>
+  <p>Download your contact information to start communicating others!</p>
   <a role="button" href="/download/public">
     <button class="bg-blue-600 text-white w-full rounded-lg p-3">
       Download Public Key
