--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         class="max-w-screen-lg mx-auto flex items-center my-10 px-7 justify-between"
       >
         <a href="/">
-          <h1 class="font-bold text-3xl">Secure Meetup</h1>
+          <h1 class="font-bold text-3xl">Padlock</h1>
         </a>
         <div class="ml-auto order-2 flex items-center space-x-5">
           <a href="/">
@@ -91,9 +91,10 @@
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+                  d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3"
                 />
               </svg>
+
               <p>Share</p>
             </div>
           </a>
@@ -115,7 +116,7 @@
       <div
         class="max-w-screen-lg mx-auto flex md:items-center py-10 px-7 md:flex-row flex-col space-y-5 md:space-y-0"
       >
-        <p class="font-bold">Secure Meetup © 2023</p>
+        <p class="font-bold">Padlock © 2023</p>
         <div class="md:ml-auto md:order-2 space-x-5 flex flex-row">
           <p>
             A
