--- a/templates/send_location.html
+++ b/templates/send_location.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% block title %}Send Location{% endblock %} {%block
-content %}
+{% extends "base.html" %} {% block script %}
+<script src="/static/send_location.js"></script>
+{% endblock %} {% block title %}Send Location{% endblock %} {%block content %}
 <section class="space-y-5 mb-10">
   <h1 class="text-2xl font-bold">Send Location</h1>
   <form method="POST" class="space-y-5">
