--- a/templates/locations.html
+++ b/templates/locations.html
@@ -9,7 +9,7 @@ content %}
     rel="noreferrer noopener"
   >
     <div class="border-2 p-5 rounded-lg space-y-3">
-      <h2 class="text-xl font-bold">{{ location.name }}</h2>
+      <h2 class="font-bold">{{ location.name }}</h2>
       <p>{{ location.data.note }}</p>
     </div>
   </a>
