--- a/templates/share.html
+++ b/templates/share.html
@@ -5,12 +5,7 @@ block content %}
   <p>Download your contact information to start communicating others!</p>
   <a role="button" href="/download/public">
     <button class="bg-blue-600 text-white w-full rounded-lg p-3">
-      Download Public Key
-    </button>
-  </a>
-  <a role="button" href="/download/private">
-    <button class="bg-blue-600 text-white w-full rounded-lg p-3">
-      Download Private Key
+      Download Contact
     </button>
   </a>
 </section>
