Separate files into groups/folders

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,15 +113,14 @@
         <p class="font-bold">Padlock © 2023</p>
         <div class="md:ml-auto md:order-2 space-x-5 flex flex-row">
           <p>
-            A
+            Open-source on
             <a
-              href="https://www.gcc.edu"
+              href="https://github.com/LGmatrix13/encrypted-messenger"
               target="_blank"
               rel="noopener"
               class="text-blue-600"
-              >Grove City College</a
+              >GitHub</a
             >
-            Project
           </p>
         </div>
       </div>
