Modify auth and forms

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -6,37 +6,35 @@
     Either create a account or provide your token if you already have an account
   </p>
 </section>
-<section class="flex space-x-10 mb-10">
-  <div class="space-y-5 w-1/2">
-    <h2 class="text-xl font-bold">Register</h2>
-    <form method="POST" action="/auth/register" class="space-y-5">
-      {{register_form.hidden_tag()}}
-      <div class="space-y-3">
-        {{register_form.name.label(class = "font-bold")}}
-        {{register_form.name(class="bg-gray-200 rounded-lg w-full p-3",
-        placeholder = "Name")}}
-      </div>
-      {{register_form.submit(class = "bg-blue-600 text-white w-full rounded-lg
-      p-3")}}
-    </form>
-  </div>
-  <div class="space-y-5 w-1/2">
-    <h2 class="text-xl font-bold">Login</h2>
-    <form
-      method="POST"
-      action="/auth/login"
-      enctype="multipart/form-data"
-      class="space-y-5"
-    >
-      {{login_form.hidden_tag()}}
-      <div class="space-y-3">
-        {{login_form.file.label(class = "font-bold")}}
-        {{login_form.file(class="bg-gray-200 rounded-lg w-full p-3", placeholder
-        = "Name")}}
-      </div>
-      {{login_form.submit(class = "bg-blue-600 text-white w-full rounded-lg
-      p-3")}}
-    </form>
-  </div>
+<section class="space-y-5 mb-10">
+  <h2 class="text-xl font-bold">Register</h2>
+  <form method="POST" action="/auth/register" class="space-y-5">
+    {{register_form.hidden_tag()}}
+    <div class="space-y-3">
+      {{register_form.name.label(class = "font-bold")}}
+      {{register_form.name(class="bg-gray-200 rounded-lg w-full p-3",
+      placeholder = "Name")}}
+    </div>
+    {{register_form.submit(class = "bg-blue-600 text-white w-full rounded-lg
+    p-3")}}
+  </form>
+</section>
+<section class="space-y-5 mb-10">
+  <h2 class="text-xl font-bold">Login</h2>
+  <form
+    method="POST"
+    action="/auth/login"
+    enctype="multipart/form-data"
+    class="space-y-5"
+  >
+    {{login_form.hidden_tag()}}
+    <div class="space-y-3">
+      {{login_form.file.label(class = "font-bold")}}
+      {{login_form.file(class="bg-gray-200 rounded-lg w-full p-3", placeholder =
+      "Name")}}
+    </div>
+    {{login_form.submit(class = "bg-blue-600 text-white w-full rounded-lg
+    p-3")}}
+  </form>
 </section>
 {% endblock %}
