--- a/templates/auth.html
+++ b/templates/auth.html
@@ -8,7 +8,11 @@
 </section>
 <section class="space-y-5 mb-10">
   <h2 class="text-xl font-bold">Register</h2>
-  <form method="POST" action="/auth/register" class="space-y-5">
+  <form
+    method="POST"
+    action="{{ url_form('auth.post_auth_register') }}"
+    class="space-y-5"
+  >
     {{register_form.hidden_tag()}}
     <div class="space-y-3">
       {{register_form.name.label(class = "font-bold")}}
@@ -23,7 +27,7 @@
   <h2 class="text-xl font-bold">Login</h2>
   <form
     method="POST"
-    action="/auth/login"
+    action="{{ url_form('auth.post_auth_login') }}"
     enctype="multipart/form-data"
     class="space-y-5"
   >
