--- a/templates/danger_zone.html
+++ b/templates/danger_zone.html
@@ -1,19 +1,24 @@
-{% extends "base.html" %} {% block title %}Danger Zone{% endblock %} {%block
-content %}
-<section class="space-y-5 mb-10">
-  <h1 class="text-2xl font-bold">Danger Zone</h1>
-  <form method="POST" class="space-y-5">
-    {{form.hidden_tag()}}
-    <div class="space-y-3">
-      {{form.master_password.label(class = "font-bold")}}
-      {{form.master_password(class="bg-gray-200 rounded-lg w-full p-3",
-      placeholder = "Master Password")}}
-    </div>
-    <div class="space-y-3">
-      {{form.delete_user.label(class = "font-bold")}}
-      {{form.delete_user(class="bg-gray-200 rounded-lg w-full p-3")}}
-    </div>
-    {{form.submit(class = "bg-blue-600 text-white w-full rounded-lg p-3")}}
-  </form>
-</section>
+{% from "macros.html" import field, submit %} {% extends "base.html" %}
+{%
+  block
+  title
+%}
+  Danger Zone
+{% endblock %}
+{% block content %}
+  <section class="space-y-5 mb-10">
+    <h1 class="text-2xl font-bold">Danger Zone</h1>
+    <form method="POST" class="space-y-5">
+      {{ form.hidden_tag() }}
+      {{
+        field(form.master_password.label,
+        form.master_password, "Master Password")
+      }}
+      {{
+        field(form.delete_user.label,
+        form.delete_user)
+      }}
+      {{ submit(form.submit) }}
+    </form>
+  </section>
 {% endblock %}
