--- a/templates/save_token.html
+++ b/templates/save_token.html
@@ -1,25 +1,12 @@
-{% extends "base.html" %} {% block title %}Save Token{% endblock %} {%block
-content %}
-<section class="space-y-5 mb-10">
-  <h1 class="text-2xl font-bold">Save Token</h1>
-  <form method="POST" class="space-y-5">
-    {{form.hidden_tag()}}
-    <div class="space-y-3">
-      {{form.recipient.label(class = "font-bold")}}
-      {{form.recipient(class="bg-gray-200 rounded-lg w-full p-3", placeholder =
-      "Contacts")}}
-    </div>
-    <div class="space-y-3">
-      {{form.context.label(class = "font-bold")}}
-      {{form.context(class="bg-gray-200 rounded-lg w-full p-3", placeholder =
-      "Context")}}
-    </div>
-    <div class="space-y-3">
-      {{form.message.label(class = "font-bold")}}
-      {{form.message(class="bg-gray-200 rounded-lg w-full p-3", placeholder =
-      "Message")}}
-    </div>
-    {{form.submit(class = "bg-blue-600 text-white w-full rounded-lg p-3")}}
-  </form>
-</section>
+{% from "macros.html" import button %}
+{% extends "base.html" %}
+{% block title %}
+  Save Token
+{% endblock %}
+{% block content %}
+  <section class="flex flex-col space-y-5 mb-10">
+    <h1 class="text-2xl font-bold">Save Token</h1>
+    <p>Save your token so you can log back in for future use.</p>
+    <a href="/save-token/download/"> {{ button("Download") }} </a>
+  </section>
 {% endblock %}
