--- a/templates/texts.html
+++ b/templates/texts.html
@@ -1,4 +1,5 @@
-{% from "macros.html" import text %} {% extends "base.html" %}
+{% from "macros.html" import text %}
+{% extends "base.html" %}
 {% block script %}
   <script src="/static/scripts/texts.js"></script>
 {% endblock %}
