--- a/templates/danger_zone.html
+++ b/templates/danger_zone.html
@@ -1,23 +1,12 @@
 {% from "macros.html" import field, submit %} {% extends "base.html" %}
-{%
-  block
-  title
-%}
-  Danger Zone
-{% endblock %}
+{% block title %}Danger Zone{% endblock %}
 {% block content %}
   <section class="space-y-5 mb-10">
     <h1 class="text-2xl font-bold">Danger Zone</h1>
     <form method="POST" class="space-y-5">
       {{ form.hidden_tag() }}
-      {{
-        field(form.master_password.label,
-        form.master_password, "Master Password")
-      }}
-      {{
-        field(form.delete_user.label,
-        form.delete_user)
-      }}
+      {{ field(form.master_password.label, form.master_password, "Master Password") }}
+      {{ field(form.delete_user.label, form.delete_user) }}
       {{ submit(form.submit) }}
     </form>
   </section>
