--- a/templates/macros.html
+++ b/templates/macros.html
@@ -12,15 +12,18 @@
 {% macro submit(input, title) %}
   {{ input(class = "bg-blue-600 text-white w-full rounded-lg p-3") }}
 {% endmacro %}
-{% macro text(text_content) %}
-  <button onclick="copyToClipboard(this)" value="{{ text.text }}">
+{% macro password(password_content) %}
+  <button
+    onclick="copyToClipboard(this)"
+    value="{{ password_content.password }}"
+  >
     <div class="border-2 p-5 rounded-lg flex items-center">
       <div class="flex flex-col space-y-3 text-left">
-        <h2 class="font-bold">{{ text_content.sender }}</h2>
-        <p>{{ text_content.context }}</p>
+        <h2 class="font-bold">{{ password_content.sender }}</h2>
+        <p>{{ password_content.context }}</p>
       </div>
       <div class="ml-auto order-2 space-x-3 flex items-center">
-        {% if text_content.verified %}
+        {% if password_content.verified %}
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
