Clean up crypto backend. Shorten RSA bits. Rename files.

--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -1,7 +1,7 @@
 {% from "macros.html" import password %}
 {% extends "base.html" %}
 {% block script %}
-  <script src="/static/scripts/texts.js"></script>
+  <script src="/static/scripts/passwords.js"></script>
 {% endblock %}
 {% block title %}Passwords{% endblock %}
 {% block content %}
